--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+body{
+    padding:25px
 /* Reset de márgenes y bordes */
 * {
     margin: 0;
@@ -99,4 +101,7 @@ footer {
     position: fixed;
     width: 100%;
     bottom: 0;
+}
+.title{
+    color:#5C6AC4
 }
